Bug fixes—for some reason the variables controller is not always recognizing that a refresh is necessary?

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /client/src/angular/library_controller.js
 /client/src/angular/controls_controller.js
 /client/src/angular/compose_rule_controller.js
+
+/client/src/angular/variables_controller.js
