In the middle of the transition to mongo—basic stuff is up and working, about to remove s3 storage

--- a/website/configs/development.env
+++ b/website/configs/development.env
@@ -1,4 +1,4 @@
-SEQUELIZE_URL=postgres://postgres@localhost:5432/codako
+MONGODB_URL=mongodb://localhost/codako
 REDIS_URL=
 AWS_ACCESSKEY=AKIAIWSEZL3VCN2TQRKQ
 AWS_SECRETKEY=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
