Adding checkerboard pattern to rules

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /web/stage-editor/src/models/SquareMaskSprite.js
 /web/stage-editor/src/models/XNARectangle.js
 /web/stage-editor/src/extensions.js
+/web/stage-editor/css/editor.css
