--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ERROR: No README.md file found!",
   "main": "app.js",
   "scripts": {
+    "start": "NODE_ENV=development foreman start -e configs/development.env",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "",
